[package]
name = "bacchus_allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
select = "0.5.0"
rusqlite = { version ="0.26.0", features = ["bundled"]}
futures = "0.3.19" 
chrono = "0.4.19"
fantoccini = "0.18.0"